Q Transform modifications