@@ -151,10 +151,10 @@ public class PolicyImportRuleServiceImpl extends AbstractRewriteRuleService<Poli
   private void populateMetadata(Node result) throws RepositoryException {
     String origPath = result.getPath();
     if (!result.hasProperty(NameConstants.PN_TITLE)) {
-      result.setProperty(NameConstants.PN_TITLE, String.format("Imported (%s)", origPath));
+      result.setProperty(NameConstants.PN_TITLE, "Imported (%s)".formatted(origPath));
     }
     if (!result.hasProperty(NameConstants.PN_DESCRIPTION)) {
-      result.setProperty(NameConstants.PN_DESCRIPTION, String.format("Imported from: %s", origPath));
+      result.setProperty(NameConstants.PN_DESCRIPTION, "Imported from: %s".formatted(origPath));
     }
   }
 
